switched to LinkedList for potential better performance